--- a/index.html
+++ b/index.html
@@ -13,20 +13,11 @@
       color: #333;
     }
 
-  header {
-  background: linear-gradient(rgba(26,26,26,0.8), rgba(26,26,26,0.9)), 
-              url('header {
-  background: linear-gradient(rgba(26,26,26,0.8), rgba(26,26,26,0.9)), 
-              url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
-  color: #fff;
-  padding: 60px 20px;
-  text-align: center;
-  position: relative;
-}') center/cover no-repeat;
-  color: #fff;
-  padding: 60px 20px;
-  text-align: center;
-  position: relative;
+header {
+      background: #1a1a1a;
+      color: #fff;
+      padding: 30px 20px;
+      text-align: center;
 }
 
     header h1 {
@@ -245,6 +236,7 @@
 </script>
 </body>
 </html>
+
 
 
 
