--- a/index.html
+++ b/index.html
@@ -154,34 +154,34 @@
       </p>
     </div>
 
-    <div class="section" id="projects">
-      <h2>Featured Projects</h2>
-      <div class="projects-grid">
-        <div class="project-card">
-          <h3>📈 $1,000 Real Investment Portfolio</h3>
-          <p>Live-tracked portfolio focused on real estate, equities, and bonds with monthly updates and performance tracking.</p>
-          <a href="projects/tracker.html" target="_blank">View Tracker</a>
-        </div>
-
-        <div class="project-card">
-          <h3>🏠 Multifamily Valuation Model</h3>
-          <p>Scenario analysis of a multifamily asset using DCF and IRR modeling across best, base, and worst-case projections.</p>
-          <a href="projects/multifamily.html" target="_blank">View Model + Memo</a>
-        </div>
-
-        <div class="project-card">
-          <h3>🏢 REIT Analysis – AvalonBay (AVB)</h3>
-          <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
-          <a href="projects/reit.html" target="_blank">Read Report</a>
-        </div>
-
-        <div class="project-card">
-          <h3>📊 3-Statement Model – Zillow</h3>
-          <p>Comprehensive financial model including ratios, DCF valuation, and strategic insights from public filings.</p>
-          <a href="projects/zillow.html" target="_blank">View Model</a>
-        </div>
-      </div>
+<div class="section">
+  <h2>Featured Projects</h2>
+  <div class="projects-grid">
+    <div class="project-card">
+      <h3>📈 $1,000 Real Investment Portfolio</h3>
+      <p>Live-tracked portfolio focused on real estate, equities, and bonds with monthly updates and performance tracking.</p>
+      <a href="RE570%20Investment%20Memo%20Ibalio.pdf" target="_blank" download>View Tracker (PDF)</a>
     </div>
+
+    <div class="project-card">
+      <h3>🏠 Multifamily Valuation Model</h3>
+      <p>Scenario analysis of a multifamily asset using DCF and IRR modeling across best, base, and worst-case projections.</p>
+      <a href="Ibalio%20Oak%20Brook%20Tower%20ARGUS.pdf" target="_blank" download>View Model + Memo (PDF)</a>
+    </div>
+
+    <div class="project-card">
+      <h3>🏢 REIT Analysis – AvalonBay (AVB)</h3>
+      <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
+      <a href="Ibalio%20Gateway%20Business%20Center%20Investment%20Memo%20%20(2).pdf" target="_blank" download>Read Report (PDF)</a>
+    </div>
+
+    <div class="project-card">
+      <h3>📊 3-Statement Model – Zillow</h3>
+      <p>Comprehensive financial model including ratios, DCF valuation, and strategic insights from public filings.</p>
+      <a href="RE%20530%20Final%20Memo.pdf" target="_blank" download>View Model (PDF)</a>
+    </div>
+  </div>
+</div>
 
     <div class="section" id="resume">
       <h2>Resume</h2>
@@ -239,3 +239,4 @@
   </script>
 </body>
 </html>
+
