--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="project-card">
           <h3>📈 $1,000 Real Investment Portfolio</h3>
           <p>Live-tracked portfolio focused on real estate, equities, and bonds with monthly updates and performance tracking.</p>
-          <a href="https://github.com/MatthewDeanIbalio/Matthew-Ibalio-Portolio/raw/main/RE570%20Investment%20Memo%20Ibalio.pdf" target="_blank">
+          <a href="RE570%20Investment%20Memo%20Ibalio.pdf" target="_blank">
             View Tracker (PDF)
           </a>
         </div>
@@ -152,7 +152,7 @@
         <div class="project-card">
           <h3>🏠 Multifamily Valuation Model</h3>
           <p>Scenario analysis of a multifamily asset using DCF and IRR modeling across best, base, and worst-case projections.</p>
-          <a href="https://github.com/MatthewDeanIbalio/Matthew-Ibalio-Portolio/raw/main/Ibalio%20Oak%20Brook%20Tower%20ARGUS.pdf" target="_blank">
+          <a href="Ibalio%20Oak%20Brook%20Tower%20ARGUS.pdf" target="_blank">
             View Model + Memo (PDF)
           </a>
         </div>
@@ -160,7 +160,7 @@
         <div class="project-card">
           <h3>🏢 REIT Analysis – AvalonBay (AVB)</h3>
           <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
-          <a href="https://github.com/MatthewDeanIbalio/Matthew-Ibalio-Portolio/raw/main/Ibalio%20Gateway%20Business%20Center%20Investment%20Memo%20%20(2).pdf" target="_blank">
+          <a href="Ibalio%20Gateway%20Business%20Center%20Investment%20Memo%20%20(2).pdf" target="_blank">
             Read Report (PDF)
           </a>
         </div>
@@ -168,7 +168,7 @@
         <div class="project-card">
           <h3>📊 3-Statement Model – Zillow</h3>
           <p>Comprehensive financial model including ratios, DCF valuation, and strategic insights from public filings.</p>
-          <a href="https://github.com/MatthewDeanIbalio/Matthew-Ibalio-Portolio/raw/main/RE%20530%20Final%20Memo.pdf" target="_blank">
+          <a href="RE%20530%20Final%20Memo.pdf" target="_blank">
             View Model (PDF)
           </a>
         </div>
@@ -179,7 +179,7 @@
     <div class="section">
       <h2>Resume & Contact</h2>
       <p>
-        <a href="https://github.com/MatthewDeanIbalio/Matthew-Ibalio-Portolio/raw/main/Matt_Ibalio_Resume.pdf" target="_blank">
+        <a href="Matt_Ibalio_Resume.pdf" target="_blank">
           Download My Resume (PDF)
         </a>
       </p>
