--- a/index.html
+++ b/index.html
@@ -12,38 +12,55 @@
       background: #f9f9f9;
       color: #333;
     }
+
     header {
       background: #1a1a1a;
       color: #fff;
-      padding: 30px 20px;
+      padding: 20px;
       text-align: center;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
+
+    nav {
+      background: #333;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
     }
-    header p {
-      margin: 5px 0;
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: 500;
     }
+
+    nav a:hover {
+      color: #80d4ff;
+    }
+
     .container {
       max-width: 960px;
       margin: 30px auto;
       padding: 0 20px;
     }
+
     .section {
       margin-bottom: 50px;
     }
+
     .section h2 {
       font-size: 1.8rem;
       border-bottom: 2px solid #ddd;
       padding-bottom: 10px;
       margin-bottom: 20px;
     }
+
     .projects-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 20px;
     }
+
     .project-card {
       background: #fff;
       border: 1px solid #ddd;
@@ -51,26 +68,25 @@
       padding: 20px;
       transition: box-shadow 0.2s ease;
     }
+
     .project-card:hover {
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
-    .project-card h3 {
-      margin-top: 0;
-    }
+
     .project-card a {
       text-decoration: none;
       color: #0066cc;
-      word-break: break-all;
+      font-weight: 500;
     }
-    .project-card a:hover {
-      text-decoration: underline;
-    }
+
     footer {
       text-align: center;
       font-size: 0.9rem;
       padding: 20px;
       background: #eee;
+      margin-top: 50px;
     }
+
     /* Carousel */
     .carousel {
       display: flex;
@@ -83,11 +99,13 @@
       position: relative;
       overflow: hidden;
     }
+
     .carousel-content {
       display: flex;
       transition: transform 0.6s ease;
       will-change: transform;
     }
+
     .carousel-item {
       flex: 0 0 auto;
       padding: 10px 25px;
@@ -101,6 +119,7 @@
       white-space: nowrap;
       cursor: pointer;
     }
+
     @media (max-width: 600px) {
       header h1 {
         font-size: 1.8rem;
@@ -108,27 +127,25 @@
       .section h2 {
         font-size: 1.4rem;
       }
-      .projects-grid {
-        grid-template-columns: 1fr;
-      }
     }
   </style>
 </head>
 
 <body>
-  <!-- Header -->
   <header>
     <h1>Matthew Ibalio</h1>
     <p>Real Estate Investment & Financial Modeling Portfolio</p>
-    <p>Email: ibalio.matthew@gmail.com | 
-      <a href="https://linkedin.com/in/mibalio" style="color:#80d4ff;">LinkedIn</a>
-    </p>
   </header>
 
-  <!-- Main Container -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="#projects">Projects</a>
+    <a href="#resume">Resume</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
   <div class="container">
-    <!-- About Me -->
-    <div class="section">
+    <div class="section" id="about">
       <h2>About Me</h2>
       <p>
         I'm a CFA Level 1 candidate and MBA student focused on Real Estate Investment & Finance.
@@ -137,101 +154,88 @@
       </p>
     </div>
 
-    <!-- Featured Projects Grid -->
-    <div class="section">
+    <div class="section" id="projects">
       <h2>Featured Projects</h2>
       <div class="projects-grid">
         <div class="project-card">
           <h3>📈 $1,000 Real Investment Portfolio</h3>
           <p>Live-tracked portfolio focused on real estate, equities, and bonds with monthly updates and performance tracking.</p>
-          <a href="investment-memos.html" target="_blank">
-            View Memos
-          </a>
+          <a href="projects/tracker.html" target="_blank">View Tracker</a>
         </div>
 
         <div class="project-card">
           <h3>🏠 Multifamily Valuation Model</h3>
           <p>Scenario analysis of a multifamily asset using DCF and IRR modeling across best, base, and worst-case projections.</p>
-          <a href="multifamily-models.html" target="_blank">
-            View Models
-          </a>
+          <a href="projects/multifamily.html" target="_blank">View Model + Memo</a>
         </div>
 
         <div class="project-card">
           <h3>🏢 REIT Analysis – AvalonBay (AVB)</h3>
           <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
-          <a href="reit-reports.html" target="_blank">
-            View Reports
-          </a>
+          <a href="projects/reit.html" target="_blank">Read Report</a>
         </div>
 
         <div class="project-card">
           <h3>📊 3-Statement Model – Zillow</h3>
           <p>Comprehensive financial model including ratios, DCF valuation, and strategic insights from public filings.</p>
-          <a href="zillow-models.html" target="_blank">
-            View Models
-          </a>
+          <a href="projects/zillow.html" target="_blank">View Model</a>
         </div>
       </div>
     </div>
 
-    <!-- Resume + Contact -->
-    <div class="section">
-      <h2>Resume & Contact</h2>
-      <p>
-        <a href="Matt_Ibalio_Resume.pdf" target="_blank">
-          Download My Resume (PDF)
-        </a>
-      </p>
-      <p>
-        Feel free to connect on <a href="https://linkedin.com/in/mibalio">LinkedIn</a> or reach out via email.
-      </p>
+    <div class="section" id="resume">
+      <h2>Resume</h2>
+      <p><a href="#">Download My Resume (PDF)</a></p>
+    </div>
+
+    <div class="section" id="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:ibalio.matthew@gmail.com">ibalio.matthew@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/mibalio" target="_blank">linkedin.com/in/mibalio</a></p>
     </div>
   </div>
 
-  <!-- Certifications Carousel -->
   <div class="carousel" id="carousel">
     <div class="carousel-content" id="carousel-content">
-      <a href="https://yourlink.com/mba" class="carousel-item">🎓 MBA – Real Estate Investment & Finance</a>
-      <a href="https://yourlink.com/cfa" class="carousel-item">📈 CFA Level 1 – Candidate (Nov 2025)</a>
-      <a href="https://yourlink.com/fmva" class="carousel-item">📊 FMVA – In Progress</a>
-      <a href="https://yourlink.com/sie" class="carousel-item">💼 FINRA SIE – Planned (End of 2025)</a>
-      <a href="https://yourlink.com/caia" class="carousel-item">🏦 CAIA – Long-Term Goal</a>
+      <a href="#" class="carousel-item">🎓 MBA – Real Estate Investment & Finance</a>
+      <a href="#" class="carousel-item">📈 CFA Level 1 – Candidate (Nov 2025)</a>
+      <a href="#" class="carousel-item">📊 FMVA – In Progress</a>
+      <a href="#" class="carousel-item">💼 FINRA SIE – Planned (End of 2025)</a>
+      <a href="#" class="carousel-item">🏦 CAIA – Long-Term Goal</a>
     </div>
   </div>
 
-  <!-- Footer -->
   <footer>
     © 2025 Matthew Ibalio | Built with ❤️ and Excel
   </footer>
 
-<script>
-  const carousel = document.getElementById("carousel-content");
-  const items = document.querySelectorAll(".carousel-item");
-  const itemCount = items.length;
-  const visibleCount = Math.floor(carousel.parentElement.offsetWidth / (items[0].offsetWidth + 20));
-  for (let i = 0; i < visibleCount; i++) {
-    carousel.appendChild(items[i].cloneNode(true));
-  }
-  let index = 0;
-  let isResetting = false;
-  function rotateCarousel() {
-    if (isResetting) return;
-    index++;
-    const itemWidth = items[0].offsetWidth + 20;
-    carousel.style.transition = "transform 0.6s ease";
-    carousel.style.transform = `translateX(-${itemWidth * index}px)`;
-    if (index === itemCount) {
-      isResetting = true;
-      setTimeout(() => {
-        carousel.style.transition = "none";
-        carousel.style.transform = "translateX(0px)";
-        index = 0;
-        isResetting = false;
-      }, 600);
+  <script>
+    const carousel = document.getElementById("carousel-content");
+    const items = document.querySelectorAll(".carousel-item");
+    const itemCount = items.length;
+    const visibleCount = Math.floor(carousel.parentElement.offsetWidth / (items[0].offsetWidth + 20));
+    for (let i = 0; i < visibleCount; i++) {
+      carousel.appendChild(items[i].cloneNode(true));
     }
-  }
-  setInterval(rotateCarousel, 3000);
-</script>
+    let index = 0;
+    let isResetting = false;
+    function rotateCarousel() {
+      if (isResetting) return;
+      index++;
+      const itemWidth = items[0].offsetWidth + 20;
+      carousel.style.transition = "transform 0.6s ease";
+      carousel.style.transform = `translateX(-${itemWidth * index}px)`;
+      if (index === itemCount) {
+        isResetting = true;
+        setTimeout(() => {
+          carousel.style.transition = "none";
+          carousel.style.transform = "translateX(0px)";
+          index = 0;
+          isResetting = false;
+        }, 600);
+      }
+    }
+    setInterval(rotateCarousel, 3000);
+  </script>
 </body>
 </html>
