--- a/index.html
+++ b/index.html
@@ -154,34 +154,36 @@
       </p>
     </div>
 
-    <div class="section" id="projects">
-      <h2>Featured Projects</h2>
-      <div class="projects-grid">
-        <div class="project-card">
-          <h3>📈 $1,000 Real Investment Portfolio</h3>
-          <p>Live-tracked portfolio focused on real estate, equities, and bonds with monthly updates and performance tracking.</p>
-          <a href="projects/tracker.html" target="_blank">View Tracker</a>
-        </div>
+    <div class="section">
+  <h2>Featured Projects</h2>
+  <div class="projects-grid">
 
-        <div class="project-card">
-          <h3>🏠 Multifamily Valuation Model</h3>
-          <p>Scenario analysis of a multifamily asset using DCF and IRR modeling across best, base, and worst-case projections.</p>
-          <a href="projects/multifamily.html" target="_blank">View Model + Memo</a>
-        </div>
-
-        <div class="project-card">
-          <h3>🏢 REIT Analysis – AvalonBay (AVB)</h3>
-          <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
-          <a href="projects/reit.html" target="_blank">Read Report</a>
-        </div>
-
-        <div class="project-card">
-          <h3>📊 3-Statement Model – Zillow</h3>
-          <p>Comprehensive financial model including ratios, DCF valuation, and strategic insights from public filings.</p>
-          <a href="projects/zillow.html" target="_blank">View Model</a>
-        </div>
-      </div>
+    <div class="project-card">
+      <h3>📈 $1,000 Real Investment Portfolio</h3>
+      <p>Live-tracked portfolio focused on real estate, equities, and bonds with monthly updates and performance tracking.</p>
+      <a href="investment-memos.html">View Memos</a>
     </div>
+
+    <div class="project-card">
+      <h3>🏠 Multifamily Valuation Model</h3>
+      <p>Scenario analysis of a multifamily asset using DCF and IRR modeling across best, base, and worst-case projections.</p>
+      <a href="multifamily-models.html">View Models</a>
+    </div>
+
+    <div class="project-card">
+      <h3>🏢 REIT Analysis – AvalonBay (AVB)</h3>
+      <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
+      <a href="reit-reports.html">View Reports</a>
+    </div>
+
+    <div class="project-card">
+      <h3>📊 3-Statement Model – Zillow</h3>
+      <p>Comprehensive financial model including ratios, DCF valuation, and strategic insights from public filings.</p>
+      <a href="zillow-models.html">View Models</a>
+    </div>
+
+  </div>
+</div>
 
     <div class="section" id="resume">
       <h2>Resume</h2>
@@ -239,3 +241,4 @@
   </script>
 </body>
 </html>
+
