--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
       padding: 20px;
       background: #eee;
     }
-    /* Carousel */
     .carousel {
       display: flex;
       justify-content: center;
@@ -116,7 +115,6 @@
 </head>
 
 <body>
-  <!-- Header -->
   <header>
     <h1>Matthew Ibalio</h1>
     <p>Real Estate Investment & Financial Modeling Portfolio</p>
@@ -124,10 +122,7 @@
       <a href="https://linkedin.com/in/mibalio" style="color:#80d4ff;">LinkedIn</a>
     </p>
   </header>
-
-  <!-- Main Container -->
   <div class="container">
-    <!-- About Me -->
     <div class="section">
       <h2>About Me</h2>
       <p>
@@ -136,46 +131,31 @@
         This site showcases my investment modeling work, scenario analyses, and ongoing portfolio projects.
       </p>
     </div>
-
-    <!-- Featured Projects Grid -->
     <div class="section">
       <h2>Featured Projects</h2>
       <div class="projects-grid">
         <div class="project-card">
           <h3>📈 $1,000 Real Investment Portfolio</h3>
           <p>Live-tracked portfolio focused on real estate, equities, and bonds with monthly updates and performance tracking.</p>
-          <a href="investment-memos.html">
-            View Memos
-          </a>
+          <a href="investment-memos.html">View Memos</a>
         </div>
-
         <div class="project-card">
           <h3>🏠 Multifamily Valuation Model</h3>
           <p>Scenario analysis of a multifamily asset using DCF and IRR modeling across best, base, and worst-case projections.</p>
-          <a href="multifamily-models.html">
-            View Models
-          </a>
+          <a href="multifamily-models.html">View Models</a>
         </div>
-
         <div class="project-card">
           <h3>🏢 REIT Analysis – AvalonBay (AVB)</h3>
           <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
-          <a href="reit-reports.html">
-            View Reports
-          </a>
+          <a href="reit-reports.html">View Reports</a>
         </div>
-
         <div class="project-card">
           <h3>📊 3-Statement Model – Zillow</h3>
           <p>Comprehensive financial model including ratios, DCF valuation, and strategic insights from public filings.</p>
-          <a href="zillow-models.html">
-            View Models
-          </a>
+          <a href="zillow-models.html">View Models</a>
         </div>
       </div>
     </div>
-
-    <!-- Resume + Contact -->
     <div class="section">
       <h2>Resume & Contact</h2>
       <p>
@@ -188,8 +168,6 @@
       </p>
     </div>
   </div>
-
-  <!-- Certifications Carousel -->
   <div class="carousel" id="carousel">
     <div class="carousel-content" id="carousel-content">
       <a href="https://yourlink.com/mba" class="carousel-item">🎓 MBA – Real Estate Investment & Finance</a>
@@ -199,12 +177,9 @@
       <a href="https://yourlink.com/caia" class="carousel-item">🏦 CAIA – Long-Term Goal</a>
     </div>
   </div>
-
-  <!-- Footer -->
   <footer>
     © 2025 Matthew Ibalio | Built with ❤️ and Excel
   </footer>
-
 <script>
   const carousel = document.getElementById("carousel-content");
   const items = document.querySelectorAll(".carousel-item");
