--- a/investment-memos.html
+++ b/investment-memos.html
@@ -15,15 +15,17 @@
   <div class="container">
     <div class="section">
       <h2>Investment Memos</h2>
-      <ul>
-        <li>
-          <a href="RE570 Investment Memo Ibalio.pdf" target="_blank">
-            RE570 Investment Memo (PDF)
-          </a>
+      <p>
+        Explore my written investment memos for the real $1,000 portfolio. Each memo includes allocation rationale, performance summary, and market insights.
+      </p>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>RE570 Investment Memo</h3>
           <p>First memo for the real $1,000 investment portfolio. Includes allocation rationale and performance summary.</p>
-        </li>
-        <!-- Add more memos here -->
-      </ul>
+          <a href="RE570 Investment Memo Ibalio.pdf" target="_blank">View PDF</a>
+        </div>
+        <!-- Add more memos as project-card blocks here -->
+      </div>
       <a href="index.html" class="back-link">← Back to Portfolio Homepage</a>
     </div>
   </div>
