--- a/zillow-models.html
+++ b/zillow-models.html
@@ -14,16 +14,18 @@
   </header>
   <div class="container">
     <div class="section">
-      <h2>Zillow 3-Statement Models</h2>
-      <ul>
-        <li>
-          <a href="RE 530 Final Memo.pdf" target="_blank">
-            Zillow Final Memo (PDF)
-          </a>
-          <p>Comprehensive financial model including ratios, DCF valuation, and strategic insights from public filings.</p>
-        </li>
-        <!-- Add more models here -->
-      </ul>
+      <h2>Featured Zillow Models</h2>
+      <p>
+        Comprehensive 3-statement financial models and memos, including ratio analysis, DCF valuation, and strategic insights from public filings.
+      </p>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>Zillow Final Memo & 3-Statement Model</h3>
+          <p>Includes balance sheet, income statement, cash flow, key ratios, and strategic recommendations.</p>
+          <a href="RE 530 Final Memo.pdf" target="_blank">View PDF</a>
+        </div>
+        <!-- Add more Zillow models as project-card blocks here -->
+      </div>
       <a href="index.html" class="back-link">← Back to Portfolio Homepage</a>
     </div>
   </div>
