--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
           <a href="investment-memos.html">View Memos</a>
         </div>
         <div class="project-card">
-          <h3>🏠 Multifamily Valuation Model</h3>
+          <h3>🏠 Multifamily Valuation Models</h3>
           <p>Scenario analysis of a multifamily asset using DCF and IRR modeling across best, base, and worst-case projections.</p>
           <a href="multifamily-models.html">View Models</a>
         </div>
         <div class="project-card">
-          <h3>🏢 REIT Analysis – AvalonBay (AVB)</h3>
+          <h3>🏢 REIT Analyses and Recommendations (AVB)</h3>
           <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
           <a href="reit-reports.html">View Reports</a>
         </div>
         <div class="project-card">
-          <h3>📊 3-Statement Model – Zillow</h3>
+          <h3>📊 3-Statement Models </h3>
           <p>Comprehensive financial model including ratios, DCF valuation, and strategic insights from public filings.</p>
           <a href="zillow-models.html">View Models</a>
         </div>
@@ -102,3 +102,4 @@
 </script>
 </body>
 </html>
+
