--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a href="multifamily-models.html">View Models</a>
         </div>
         <div class="project-card">
-          <h3>🏢 REIT Analyses and Recommendations (AVB)</h3>
+          <h3>🏢 REIT Analyses and Recommendations</h3>
           <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
           <a href="reit-reports.html">View Reports</a>
         </div>
@@ -102,4 +102,5 @@
 </script>
 </body>
 </html>
+
 
