--- a/commercial-memos.html
+++ b/commercial-memos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Multifamily Valuation Models | Matthew Ibalio Portfolio</title>
+  <title>Commercial Real Estate Investment Memos using ARGUS | Matthew Ibalio Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,17 +14,26 @@
   </header>
   <div class="container">
     <div class="section">
-      <h2>Featured Multifamily Models</h2>
+      <h2>Commercial Real Estate Investment Memos using ARGUS</h2>
       <p>
-        Detailed scenario analyses of multifamily assets, including DCF and IRR modeling across best, base, and worst-case projections.
+        Explore investment memos and ARGUS models for commercial real estate projects. Includes scenario analyses, underwriting, and market comps.
       </p>
       <div class="projects-grid">
         <div class="project-card">
           <h3>Oak Brook Tower ARGUS Model</h3>
-          <p>Scenario analysis for Oak Brook Tower. Includes DCF and IRR calculations, rent growth assumptions, and market comps.</p>
-          <a href="Ibalio Oak Brook Tower ARGUS.pdf" target="_blank">View PDF</a>
+          <p>Scenario analysis and ARGUS model for Oak Brook Tower. Detailed DCF, IRR, and rent growth assumptions.</p>
+          <a href="Ibalio%20Oak%20Brook%20Tower%20ARGUS.pdf" target="_blank">View & Download PDF</a>
         </div>
-        <!-- Add more models as project-card blocks here -->
+        <div class="project-card">
+          <h3>RE 570 Investment Memo</h3>
+          <p>Investment memo for $1,000 commercial portfolio allocation, rationale, and performance summary.</p>
+          <a href="RE570%20Investment%20Memo%20Ibalio.pdf" target="_blank">View & Download PDF</a>
+        </div>
+        <div class="project-card">
+          <h3>Gateway Business Center Investment Memo</h3>
+          <p>Full investment memo for Gateway Business Center. Includes comps, macro analysis, and buy/sell recommendations.</p>
+          <a href="Ibalio%20Gateway%20Business%20Center%20Investment%20Memo%20%20(2).pdf" target="_blank">View & Download PDF</a>
+        </div>
       </div>
       <a href="index.html" class="back-link">← Back to Portfolio Homepage</a>
     </div>
