Update and rename investment-memos.html to multifamily-models.html

--- a/multifamily-models.html
+++ b/multifamily-models.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Investment Memos | Matthew Ibalio Portfolio</title>
+  <title>Multifamily Valuation Models | Matthew Ibalio Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,17 +14,16 @@
   </header>
   <div class="container">
     <div class="section">
-      <h2>Investment Memos</h2>
+      <h2>Multifamily Valuation Models</h2>
       <p>
-        Explore my written investment memos for the real $1,000 portfolio. Each memo includes allocation rationale, performance summary, and market insights.
+        Scenario analysis and financial modeling for a multifamily asset. Download the final Excel model and supporting memo below.
       </p>
       <div class="projects-grid">
         <div class="project-card">
-          <h3>RE570 Investment Memo</h3>
-          <p>First memo for the real $1,000 investment portfolio. Includes allocation rationale and performance summary.</p>
-          <a href="RE570 Investment Memo Ibalio.pdf" target="_blank">View PDF</a>
+          <h3>RE 530 Final Memo</h3>
+          <p>Final memo and model for a multifamily property investment analysis. Includes detailed DCF, IRR, and risk scenario projections.</p>
+          <a href="RE%20530%20Final%20Memo.pdf" target="_blank">View & Download PDF</a>
         </div>
-        <!-- Add more memos as project-card blocks here -->
       </div>
       <a href="index.html" class="back-link">← Back to Portfolio Homepage</a>
     </div>
